fix(bootstrap4-theme): remove extra margin

--- a/packages/bootstrap4-theme/src/scss/extends/_sidebar.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_sidebar.scss
@@ -179,6 +179,5 @@ Sidebar Navigation
 
   @include media-breakpoint-down(md) {
     border-top: 0;
-    margin: 0 1.25rem;
   }
 }
